# GSMAS

./: .env.example  .gitignore  LICENSE  Makefile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/web/: app.js  bus.js  index.html  styles.css
app/web/components/: agent-activity.js  event-log.js  feedback-panel.js  graph-view.js  node-detail.js  signal-form.js  workspace-bar.js
core/agents/: base.py  tool_loop.py
core/events/: bus.py
core/graph/: invariants.py  models.py  store.py
core/learning/: feedback.py  learning_role.py  recall.py  retrospective.py
core/providers/: base.py  mock-provider.py  openai_provider.py  openai_provier.py
core/roles/: base.py
core/runtime/: orchestrator.py  swarm.py
core/tools/: base.py  graph_read.py
data/: telemetry.jsonl
domain/roles/: aggregator.py  investigator.py  mock_specialist.py  planner.py  proposer.py  synthesizer.py  theorist.py
domain/tools/: log_query.py
experiments/: metrics.py
tests/: conftest.py
tests/integration/: test_aggregator.py  test_case_metrics.py  test_end_to_end.py  test_invariants.py  test_investigator.py  test_learning_role.py  test_planner.py  test_proposer.py  test_runtime_smoke.py  test_store.py  test_synthesizer.py  test_theorist.py
tests/mocks/: mock_provider.py
tests/unit/: test_agents.py  test_bus.py  test_feedback.py  test_learning.py  test_models.py  test_tools.py
