[project]
name = "haive"
version = "0.1.0"
description = "Haive — Python project with OpenAI + Neo4j"
requires-python = ">=3.14"
dependencies = [
    "neo4j>=6.2.0",
    "openai>=1.54.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.7.0",
    "pyright>=1.1.380",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "testcontainers[neo4j]>=4.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py314"
indent-width = 4

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import order)
    "B",   # flake8-bugbear (likely bugs)
    "UP",  # pyupgrade (modernize syntax)
    "SIM", # flake8-simplify
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["."]
exclude = [".venv", "**/__pycache__", "clipboard.py"]
pythonVersion = "3.14"
typeCheckingMode = "standard"
reportMissingImports = "error"
reportMissingTypeStubs = "warning"

[tool.basedpyright]
# keep the IDE's basedpyright aligned with pyright: never type-check the scratchpad
include = ["."]
exclude = [".venv", "**/__pycache__", "clipboard.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = "-m 'not integration'"
markers = [
    "integration: requires a real Neo4j (started via testcontainers/Docker)",
    "unit: fast test with no external dependencies",
]

[tool.uv]
default-groups = ["dev"]
